# Startup-Radar

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  logging.py  observability.py
backend/app/db/: neo4j.py  schema.py
backend/app/graph/: __init__.py  graph_store.py
backend/app/models/: __init__.py  extraction.py
backend/app/observability/: __init__.py  artifacts.py  context.py  feedback.py  runs.py  scorers.py  setup.py
backend/app/prompts/: __init__.py  extraction.py
backend/app/services/: embedding.py  entity_resolution.py  extraction_utils.py  ingestion.py  llm.py  progress.py  scraper.py  tasks.py
backend/tests/: test_graph_store.py  test_ingestion_pipeline.py  test_llm_parsing.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css
frontend/src/components/: DetailsPanel.test.tsx  DetailsPanel.tsx  FilterBar.tsx  GraphCanvas.tsx  IngestControl.tsx  InsightsPanel.tsx  SearchPanel.tsx
frontend/src/lib/: api.ts  helpers.ts
frontend/src/test/: setup.ts
frontend/src/types/: graph.ts
